--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
     <title>Chloe Meyer's Programing Portfolio</title>
 </head>
 <body>
-    <img src="banner">
+    <img src="banner.jpg">
     Welcome to Chloe Meyer's Portfolio!
     <br>
     <br>
     This portfolio webpage, I programed with HTML & CSS.
     <h1>
-
     Click <a href="abouthtml"> here </a> to learn about me!
 </body>
 </html>
