--- a/about.html
+++ b/about.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Chloe Meyer's Programing Portfolio </title>
+    <title> Chloe Meyer's Programing Portfolio : About Me </title>
 </head>
 <body>
     <img src="banner.jpg" width="600">
     <br>
     <h1>
     <strong>
-    Welcome to Chloe Meyer's Portfolio!
+    About Me
     </strong>
     </h1>
     <br>
-    My name is Chloe Meyer and this is my portfolio webpage. I programed this site with HTML & CSS, and will be adding more things I've created with HTML and CSS in the future.
+    Hi name is Chloe Meyer, I'm currently a student at URI. I was born in China and I was raised in Brooklyn, NY. I like eating Sushi and Fencing, as well as Basketball and Kickboxing. I love to sing and dance, as well as play in Virtual Reality.
+    <br>
+    <br>
+    Fun Fact : As a kid I used to do Binary Coding.
     <br>
     <br>
     <table>
