--- a/javascripts.html
+++ b/javascripts.html
@@ -10,11 +10,11 @@
     <br>
     <h1>
     <strong>
-    Welcome to Chloe Meyer's Portfolio!
+    javascripts
     </strong>
     </h1>
     <br>
-    My name is Chloe Meyer and this is my portfolio webpage. I programed this site with HTML & CSS, and will be adding more things I've created with HTML and CSS in the future.
+    [N/A TxT]
     <br>
     <br>
     <table>
