--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
     <tr>
         <td>
         <a href="index.html"><img src="ButtonIMG1.png"> </a>
+        </td>
         <td>
-        <a href="javascripts.html"><img src="ButtonIMG2.png">
-        </a>
+        <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
         </td>
         <td>
         <a href="about.html"><img src="ButtonIMG3.png"></a>
