--- a/about.html
+++ b/about.html
@@ -6,32 +6,35 @@
     <title> Chloe Meyer's Programing Portfolio : About Me </title>
 </head>
 <body>
-    <img src="banner.jpg" width="600">
+    <img src="banner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
+    <br>
+    <table>
+        <tr>
+            <td>
+            <a href="index.html"><img src="ButtonIMG1.png"> </a>
+            </td>
+            <td>
+            <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
+            </td>
+            <td>
+            <a href="about.html"><img src="ButtonIMG3.png"></a>
+            </td>
+        </tr>
+        </table>
     <br>
     <h1>
     <strong>
     About Me
     </strong>
     </h1>
-    <br>
     Hi name is Chloe Meyer, I'm currently a student at URI. I was born in China and I was raised in Brooklyn, NY. I like eating Sushi and Fencing, as well as Basketball and Kickboxing. I love to sing and dance, as well as play in Virtual Reality.
+    <br>
+    <br>
+    <a href="https://rec.net/user/ashleyshards"><img src="SUSHIvrBBB.jpg" at="VR avatar holding Sushi" width="250"></a>
     <br>
     <br>
     Fun Fact : As a kid I used to do Binary Coding.
     <br>
     <br>
-    <table>
-    <tr>
-        <td>
-        <a href="index.html"><img src="ButtonIMG1.png"> </a>
-        </td>
-        <td>
-        <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
-        </td>
-        <td>
-        <a href="about.html"><img src="ButtonIMG3.png"></a>
-        </td>
-    </tr>
-    </table>
 </body>
 </html>
