--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <title> Chloe Meyer's Programing Portfolio </title>
 </head>
 <body>
-    <img src="banner.jpg" width="600">
+    <img src="banner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
+    <br>
+    <table>
+        <tr>
+            <td>
+            <a href="index.html"><img src="ButtonIMG1.png"> </a>
+            </td>
+            <td>
+            <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
+            </td>
+            <td>
+            <a href="about.html"><img src="ButtonIMG3.png"></a>
+            </td>
+        </tr>
+        </table>
     <br>
     <h1>
     <strong>
     Welcome to Chloe Meyer's Portfolio!
     </strong>
     </h1>
-    <br>
     My name is Chloe Meyer and this is my portfolio webpage. I programed this site with HTML & CSS, and will be adding more things I've created with HTML and CSS in the future.
     <br>
     <br>
-    <table>
-    <tr>
-        <td>
-        <a href="index.html"><img src="ButtonIMG1.png"> </a>
-        </td>
-        <td>
-        <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
-        </td>
-        <td>
-        <a href="about.html"><img src="ButtonIMG3.png"></a>
-        </td>
-    </tr>
-    </table>
 </body>
 </html>
