--- a/about.html
+++ b/about.html
@@ -8,15 +8,15 @@
 <body>
     <img src="banner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
     <br>
-    <table>
+    <table width="600">
         <tr>
-            <td>
+            <td align="center">
             <a href="index.html"><img src="ButtonIMG1.png"> </a>
             </td>
-            <td>
+            <td align="center">
             <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
             </td>
-            <td>
+            <td align="center">
             <a href="about.html"><img src="ButtonIMG3.png"></a>
             </td>
         </tr>
