--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Chloe Meyer's Programing Portfolio : About Me </title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
     <img src="banner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
