--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <img src="banner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
+    <img src="mybanner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
     <br>
     <table width="600px">
         <tr>
             <td align="center">
-            <a href="index.html"><img src="ButtonIMG1.png"> </a>
+            <a href="index.html"><img src="Home.png"> </a>
             </td>
             <td align="center">
-            <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
+            <a href="javascripts.html"><img src="Javascripts.png"></a>
             </td>
             <td align="center">
-            <a href="about.html"><img src="ButtonIMG3.png"></a>
+            <a href="about.html"><img src="AboutMe.png"></a>
             </td>
         </tr>
         </table>
@@ -27,6 +27,9 @@
     <strong>
     Welcome to Chloe Meyer's Portfolio!
     </strong>
+    <br>
+    <img src="chloexmeyer.jpg" at="Me with friends" width="500">
+    <br>
     </h1>
     My name is Chloe Meyer and this is my portfolio webpage. I programed this site with HTML & CSS, and will be adding more things I've created with HTML and CSS in the future.
     <br>
