--- a/javascripts.html
+++ b/javascripts.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-    <img src="banner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
+    <img src="mybanner.jpg" alt="CSC106 The Joy of Programing Banner" width="600">
     <br>
     <table width="600">
         <tr>
             <td align="center">
-            <a href="index.html"><img src="ButtonIMG1.png"> </a>
+            <a href="index.html"><img src="Home.png"> </a>
             </td>
             <td align="center">
-            <a href="javascripts.html"><img src="ButtonIMG2.png"></a>
+            <a href="javascripts.html"><img src="Javascripts.png"></a>
             </td>
             <td align="center">
-            <a href="about.html"><img src="ButtonIMG3.png"></a>
+            <a href="about.html"><img src="AboutMe.png"></a>
             </td>
         </tr>
         </table>
