--- a/about.html
+++ b/about.html
@@ -23,12 +23,16 @@
         </tr>
         </table>
     <br>
-    <h1>
+    <h1 align="center">
+    <div>
     <strong>
     About Me
     </strong>
+    </div>
     </h1>
+    <div>
     Hi name is Chloe Meyer, I'm currently a student at URI. I was born in China and I was raised in Brooklyn, NY. I like eating Sushi and Fencing, as well as Basketball and Kickboxing. I love to sing and dance, as well as play in Virtual Reality.
+    </div>
     <br>
     <br>
     <a href="https://rec.net/user/ashleyshards"><img src="SUSHIvrBBB.jpg" at="VR avatar holding Sushi" width="250"></a>
