--- a/index.html
+++ b/index.html
@@ -23,15 +23,19 @@
         </tr>
         </table>
     <br>
-    <h1>
+    <h1 align="center">
+    <div>
     <strong>
     Welcome to Chloe Meyer's Portfolio!
     </strong>
     <br>
-    <img src="chloexmeyer.jpg" at="Me with friends" width="500">
+    <img src="chloexmeyer.jpg" at="Chloe Meyer with friends" width="500">
+    </div>
     <br>
     </h1>
+    <div>
     My name is Chloe Meyer and this is my portfolio webpage. I programed this site with HTML & CSS, and will be adding more things I've created with HTML and CSS in the future.
+    </div>
     <br>
     <br>
 </body>
