--- a/javascripts.html
+++ b/javascripts.html
@@ -23,10 +23,12 @@
         </tr>
         </table>
     <br>
-    <h1>
+    <h1 align="center">
+    <div>
     <strong>
-    javascripts
+    Javascripts
     </strong>
+    <div>
     </h1>
     [N/A TxT]
     <br>
