--- a/javascripts.html
+++ b/javascripts.html
@@ -30,7 +30,9 @@
     </strong>
     <div>
     </h1>
-    [N/A TxT]
+    <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_bitmoji/5559067264991232">Meyer_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_bitmoji/5559067264991232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+
     <br>
     <br>
 </body>
