--- a/javascripts.html
+++ b/javascripts.html
@@ -31,8 +31,14 @@
     <div>
     </h1>
     <br>
-    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_racingbitmojifun/4716462339833856">Meyer_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_bitmoji/5559067264991232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
-
+    <h2>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_bitmoji/5559067264991232">Meyer_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_bitmoji/5559067264991232/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_dancebitmoji/6194845338877952">Meyer_DanceBitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_dancebitmoji/6194845338877952/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_racingbitmojifun/4716462339833856">Meyer_racingBitmojiFun</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_racingbitmojifun/4716462339833856/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_program-your-medical-condition-decision-tree/5755252844052480">Meyer_Program Your Medical Condition Decision Tree</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_program-your-medical-condition-decision-tree/5755252844052480/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <br>
     <br>
 </body>
