--- a/javascripts.html
+++ b/javascripts.html
@@ -40,6 +40,8 @@
     <br>
     <h2><a href="https://www.khanacademy.org/computer-programming/meyer_program-your-medical-condition-decision-tree/5755252844052480">Meyer_Program Your Medical Condition Decision Tree</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_program-your-medical-condition-decision-tree/5755252844052480/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_dancefloor/5476397140983808">Meyer_dancefloor</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_dancefloor/5476397140983808/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <br>
     <br>
 </body>
 </html>
