--- a/javascripts.html
+++ b/javascripts.html
@@ -42,6 +42,8 @@
     <br>
     <h2><a href="https://www.khanacademy.org/computer-programming/meyer_dancefloor/5476397140983808">Meyer_dancefloor</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_dancefloor/5476397140983808/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_part-3-programming-with-arrays/4691962040729600">Meyer_Part 3: Programming With Arrays</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_part-3-programming-with-arrays/4691962040729600/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+    <br>
     <br>
 </body>
 </html>
