--- a/javascripts.html
+++ b/javascripts.html
@@ -44,6 +44,7 @@
     <br>
     <h2><a href="https://www.khanacademy.org/computer-programming/meyer_part-3-programming-with-arrays/4691962040729600">Meyer_Part 3: Programming With Arrays</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_part-3-programming-with-arrays/4691962040729600/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <br>
+    <h2><a href="https://www.khanacademy.org/computer-programming/meyer_contacts/5035232767819776">Meyer_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/meyer_contacts/5035232767819776/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
     <br>
 </body>
 </html>
